# hello-rust-wasm

./: Cargo.toml  README.md  index.html  index.js
pkg/: hello_rust_wasm.d.ts  hello_rust_wasm.js  hello_rust_wasm_bg.wasm  package.json
src/: lib.rs  main.rs
