[package]
name = "hello-rust-wasm"
version = "0.1.0"
authors = ["Jeya Balaji Balasubramanian <jeyabbalas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
chrono = "0.4"